<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/appName"
        android:layout_width="233dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/way_2_self"
        android:textColor="@color/purple_500"
        android:textSize="50sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/introImage"
        android:layout_width="352dp"
        android:layout_height="316dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />

    <Button
        android:id="@+id/button1"
        android:layout_width="199dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        android:backgroundTint="@color/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introImage" />

    <Button
        android:id="@+id/button2"
        android:layout_width="199dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textStyle="normal"
        android:backgroundTint="@color/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1" />


    <TextView
        android:id="@+id/ContinueAs"
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/continue_as"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginTop="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="153dp" />

    <LinearLayout
        android:id="@+id/social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ContinueAs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/google"
            android:layout_marginEnd="16dp"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/apple"
            android:layout_marginEnd="16dp"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:src="@drawable/fb" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>